<resources>
    <string name="app_name">Weather API Test App</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="request">Request</string>
    <string name="pick_date">Pick Date</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="history">Requests history</string>
    <string name="home">Home</string>
    <string name="client_error">Invalid request</string>
    <string name="server_error">Server error. Try again later</string>
    <string name="unknown_error">Something went wrong</string>
    <string name="invalid_date_error">No forecast for this date. Please select another.</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="forecast">Forecast</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="send_email">Send E-mail</string>
    <string name="show_log">Show log</string>
    <string name="provider">Provided by gismeteo.ru</string>
</resources>